--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "axios": "^1.7.7",
+    "mobx": "^6.13.5",
+    "mobx-react-lite": "^4.0.7",
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-reanimated": "^3.16.0"
