--- a/ios/ReactProject/Info.plist
+++ b/ios/ReactProject/Info.plist
@@ -26,14 +26,13 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-	  <!-- Do not change NSAllowsArbitraryLoads to true, or you will risk app rejection! -->
 		<key>NSAllowsArbitraryLoads</key>
 		<false/>
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -48,5 +47,14 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Domino BoId Italic.otf</string>
+		<string>Domino Bold Reverse Italic.otf</string>
+		<string>Domino Bold.otf</string>
+		<string>Domino Italic.otf</string>
+		<string>Domino Regular.otf</string>
+		<string>DomIno Reverse Italic.otf</string>
+	</array>
 </dict>
 </plist>
