--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "mobx": "^6.13.5",
+    "mobx-react-lite": "^4.1.0",
     "react": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-modalize": "^2.1.1",
     "react-native-reanimated": "^3.16.0"
   },
   "devDependencies": {
