--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "mobx-react": "^9.2.0",
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-reanimated": "^3.16.0"
